<?xml version="1.0" encoding="utf-8"?>
<layout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <import type="com.example.couponsapp.common.entities.CouponEntity"/>
        <variable
            name="viewModel"
            type="com.example.couponsapp.mainModule.viewModel.MainViewModel" />
        <variable
            name="isActive"
            type="boolean" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/common_padding_xlarge"
        android:paddingVertical="@dimen/common_padding_default"
        tools:context=".mainModule.view.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConsult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_button_consult"
            android:onClick="@{() -> viewModel.consultCouponByCode()}"
            app:layout_constraintStart_toEndOf="@+id/btnCreate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_button_create"
            android:onClick="@{() -> viewModel.saveCoupon()}"
            tools:visibility="visible"
            app:isGone="@{isActive}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnConsult"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_text_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCoupon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/main_hint_coupon"
            android:layout_marginBottom="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnConsult"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.coupon.code}"
                android:contentDescription="@string/main_hint_coupon"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@{isActive ? @string/main_hint_active : @string/main_hint_description}"
            android:enabled="@{!isActive}"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilCoupon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/main_hint_description"
                android:text="@={viewModel.coupon.description}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="Cupón válido por 10% en compras mayores a 10 USD."/>
        </com.google.android.material.textfield.TextInputLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>